--- a/SpiceItUp.client/src/assets/scss/_utilities.scss
+++ b/SpiceItUp.client/src/assets/scss/_utilities.scss
@@ -177,7 +177,12 @@
     background-color: currentColor;
   }
 }
-
+.selectable1 {
+  position: relative;
+  &:hover {
+    cursor: pointer;
+  }
+}
 .elevation-1 {
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
